--- a/gmail-ai-demo.ipynb
+++ b/gmail-ai-demo.ipynb
@@ -2,63 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Using simplegmail abstraction instead of writing gmail logic from scratch\n",
     "# https://github.com/jeremyephron/simplegmail\n",
     "from simplegmail import Gmail, query\n",
-    "# Hugging Face\n",
-    "from transformers import pipeline\n",
-    "import torch\n"
+    "# ollama\n",
+    "import ollama\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get gmail service - may need to authenticate - check https://github.com/jeremyephron/simplegmail\n",
     "gmail = Gmail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# make use of GPU if present for AI models\n",
-    "device = 0 if torch.cuda.is_available() else -1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "At least one of TensorFlow 2.0 or PyTorch should be installed. To install TensorFlow 2.0, read the instructions at https://www.tensorflow.org/install/ To install PyTorch, read the instructions at https://pytorch.org/.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[49], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Start hugging face model pipelines\u001b[39;00m\n\u001b[1;32m      2\u001b[0m qa_model \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdeepset/roberta-base-squad2\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 3\u001b[0m qa \u001b[38;5;241m=\u001b[39m \u001b[43mpipeline\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mquestion-answering\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mqa_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtokenizer\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mqa_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m sa \u001b[38;5;241m=\u001b[39m pipeline(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msentiment-analysis\u001b[39m\u001b[38;5;124m'\u001b[39m, device\u001b[38;5;241m=\u001b[39mdevice)\n",
-      "File \u001b[0;32m~/Documents/job-mail-ai/.venv/lib/python3.12/site-packages/transformers/pipelines/__init__.py:895\u001b[0m, in \u001b[0;36mpipeline\u001b[0;34m(task, model, config, tokenizer, feature_extractor, image_processor, framework, revision, use_fast, token, device, device_map, torch_dtype, trust_remote_code, model_kwargs, pipeline_class, **kwargs)\u001b[0m\n\u001b[1;32m    893\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(model, \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m framework \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    894\u001b[0m     model_classes \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtf\u001b[39m\u001b[38;5;124m\"\u001b[39m: targeted_task[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtf\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpt\u001b[39m\u001b[38;5;124m\"\u001b[39m: targeted_task[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpt\u001b[39m\u001b[38;5;124m\"\u001b[39m]}\n\u001b[0;32m--> 895\u001b[0m     framework, model \u001b[38;5;241m=\u001b[39m \u001b[43minfer_framework_load_model\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    896\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    897\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmodel_classes\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmodel_classes\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    898\u001b[0m \u001b[43m        \u001b[49m\u001b[43mconfig\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    899\u001b[0m \u001b[43m        \u001b[49m\u001b[43mframework\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mframework\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    900\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtask\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtask\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    901\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mhub_kwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    902\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mmodel_kwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    903\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    905\u001b[0m model_config \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mconfig\n\u001b[1;32m    906\u001b[0m hub_kwargs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_commit_hash\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39m_commit_hash\n",
-      "File \u001b[0;32m~/Documents/job-mail-ai/.venv/lib/python3.12/site-packages/transformers/pipelines/base.py:237\u001b[0m, in \u001b[0;36minfer_framework_load_model\u001b[0;34m(model, config, model_classes, task, framework, **model_kwargs)\u001b[0m\n\u001b[1;32m    211\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    212\u001b[0m \u001b[38;5;124;03mSelect framework (TensorFlow or PyTorch) to use from the `model` passed. Returns a tuple (framework, model).\u001b[39;00m\n\u001b[1;32m    213\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    234\u001b[0m \u001b[38;5;124;03m    `Tuple`: A tuple framework, model.\u001b[39;00m\n\u001b[1;32m    235\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    236\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_tf_available() \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_torch_available():\n\u001b[0;32m--> 237\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[1;32m    238\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAt least one of TensorFlow 2.0 or PyTorch should be installed. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    239\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTo install TensorFlow 2.0, read the instructions at https://www.tensorflow.org/install/ \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    240\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTo install PyTorch, read the instructions at https://pytorch.org/.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    241\u001b[0m     )\n\u001b[1;32m    242\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(model, \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m    243\u001b[0m     model_kwargs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_from_pipeline\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m task\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: At least one of TensorFlow 2.0 or PyTorch should be installed. To install TensorFlow 2.0, read the instructions at https://www.tensorflow.org/install/ To install PyTorch, read the instructions at https://pytorch.org/."
-     ]
-    }
-   ],
-   "source": [
-    "# Start hugging face model pipelines\n",
-    "qa_model = \"deepset/roberta-base-squad2\"\n",
-    "qa = pipeline('question-answering', model=qa_model, tokenizer=qa_model, device=device)\n",
-    "\n",
-    "sa = pipeline('sentiment-analysis', device=device)"
    ]
   },
   {
@@ -74,49 +36,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total messages: 14\n",
+      "Total messages: 8\n",
       "from: <Recruiting@tranetechnologies.com> date:2024-08-15 19:43:11-04:00\n",
-      "\tsubject: Trane Technologies Candidate Experience Survey\n",
+      "        subject: Trane Technologies Candidate Experience Survey\n",
+      "No\n",
       "from: Platform Notifications <PlatformNotifications-noreply@google.com> date:2024-08-15 18:04:00-04:00\n",
-      "\tsubject: Your project gmail-api-432621 has been shut down\n",
+      "        subject: Your project gmail-api-432621 has been shut down\n",
+      "No.\n",
       "from: Sydney Christensen <Sydney.Christensen@mondo.com> date:2024-08-15 17:45:59-04:00\n",
-      "\tsubject: Digital Content Producer - Remote - Contract Opportunity!!\n",
+      "        subject: Digital Content Producer - Remote - Contract Opportunity!!\n",
+      "No.\n",
       "from: Bhanu Singh <bhanupriya@ibridgetechsoft.com> date:2024-08-15 15:29:47-04:00\n",
-      "\tsubject: Python Developer with NodeJs\n",
+      "        subject: Python Developer with NodeJs\n",
+      "No.\n",
       "from: \"People, Culture and Belonging: People Experience\" <human.resources@message.vu.edu> date:2024-08-15 13:41:04-04:00\n",
-      "\tsubject: Talent Acquisition Satisfaction Survey\n",
+      "        subject: Talent Acquisition Satisfaction Survey\n",
+      "No.\n",
       "from: Bhanu Singh <bhanupriya@ibridgetechsoft.com> date:2024-08-15 11:04:08-04:00\n",
-      "\tsubject: Java developer (Healthcare domain)\n",
+      "        subject: Java developer (Healthcare domain)\n",
+      "No.\n",
       "from: Trane Technologies Careers <tranetechnologiescareers_noreply@tranetechnologies.com> date:2024-08-15 10:20:48-04:00\n",
-      "\tsubject: Status of your application with Trane Technologies\n",
+      "        subject: Status of your application with Trane Technologies\n",
+      "No\n",
       "from: hr-recruiting@enfusion.com date:2024-08-15 09:46:16-04:00\n",
-      "\tsubject: Update from Enfusion on your application\n",
-      "from: LinkedIn <jobs-noreply@linkedin.com> date:2024-08-15 08:53:59-04:00\n",
-      "\tsubject: Mahidhar Reddy, your application was sent to East End Resources\n",
-      "from: Splunk Recruiting Team <no-reply@jobvite.com> date:2024-08-15 06:52:42-04:00\n",
-      "\tsubject: Splunk Application Update | Software Engineer - Early in Career (Backend/Full-stack) (29740)\n",
-      "from: no-reply@workday.ameriprise.com date:2024-08-15 01:27:04-04:00\n",
-      "\tsubject: Application Update from Ameriprise Financial\n",
-      "from: lilly@myworkday.com date:2024-08-15 00:17:49-04:00\n",
-      "\tsubject: Eli Lilly - Application Update\n",
-      "from: CRED <protect@cred.club> date:2024-08-14 23:55:21-04:00\n",
-      "\tsubject: message from CRED: RBI in-principle approval\n",
-      "from: \"hrsystems@becu.org\" <becu@myworkday.com> date:2024-08-14 23:53:32-04:00\n",
-      "\tsubject: BECU Candidate Experience Survey 2024\n"
+      "        subject: Update from Enfusion on your application\n",
+      "No.\n"
      ]
     }
    ],
    "source": [
     "print(f'Total messages: {len(messages)}')\n",
     "for message in messages:\n",
-    "    print(f'from: {message.sender} date:{message.date}\\n\\tsubject: {message.subject}')\n",
+    "    print(f\"\"\"from: {message.sender} date:{message.date}\n",
+    "        subject: {message.subject}\"\"\")\n",
+    "    result = ollama.generate(model='llama3.1', prompt=f\"\"\"Here is mail I received:\n",
+    "                             {message.plain}\n",
+    "                             Give a simple Yes or No answer to the question - Do you think the following mail I recieved is regarding a job application? \"\"\")\n",
+    "    print(result['response'])\n",
     "    "
    ]
   }
