--- a/gmail-ai-demo.ipynb
+++ b/gmail-ai-demo.ipynb
@@ -30,13 +30,13 @@
    "outputs": [],
    "source": [
     "# Get mails from past _ units\n",
-    "numberOf = 10\n",
+    "numberOf = 1\n",
     "messages = gmail.get_messages(query=query.construct_query(newer_than=(numberOf, \"hour\"), labels=[[\"INBOX\"]]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,130 @@
       "Total messages: 8\n",
       "from: <Recruiting@tranetechnologies.com> date:2024-08-15 19:43:11-04:00\n",
       "        subject: Trane Technologies Candidate Experience Survey\n",
-      "No\n",
+      "None\n",
+      "from: Platform Notifications <PlatformNotifications-noreply@google.com> date:2024-08-15 18:04:00-04:00\n",
+      "        subject: Your project gmail-api-432621 has been shut down\n",
+      "Project Permanent Deletion Warning\n",
+      "\n",
+      "\n",
+      "Dear Developer,\n",
+      "\n",
+      "Your Google Cloud project gmail-api-432621 was shut down on August 15, 2024  \n",
+      "10:03:58 PM UTC.\n",
+      "\n",
+      "Shut-down projects and the data stored in them may be recovered for a  \n",
+      "limited time before the projects are permanently deleted. If you'd like to  \n",
+      "recover your project, you must cancel the project's permanent deletion  \n",
+      "before September 14, 2024 10:03:58 PM UTC.\n",
+      "\n",
+      "To recover your shut-down project:\n",
+      "\n",
+      "Visit the Resources pending deletion page.\n",
+      "Select the project you want to recover, and click Restore.\n",
+      "In the confirmation dialog, click Restore.\n",
+      "\n",
+      "\n",
+      "If you cannot recover your project by following the instructions above, you  \n",
+      "can try restoring it using the gcloud undelete command.\n",
+      "\n",
+      "If you take no action by September 14, 2024 10:03:58 PM UTC, you will be  \n",
+      "unable to recover your project.\n",
+      "\n",
+      "If you have any questions, please visit Google Cloud Platform Resource  \n",
+      "Manager Documentation or contact Google Cloud Platform Support.\n",
+      "\n",
+      "Cordially,\n",
+      "The Google Cloud Platform Team\n",
+      "\n",
+      "\n",
+      "© 2024 Google LLC. 1600 Amphitheatre Parkway, Mountain View, CA 94043\n",
+      "\n",
+      "You have received this mandatory email service announcement to update you  \n",
+      "about important changes to your Google project, product or account.\n",
+      "\n",
+      "\n",
+      "\n",
+      "from: Sydney Christensen <Sydney.Christensen@mondo.com> date:2024-08-15 17:45:59-04:00\n",
+      "        subject: Digital Content Producer - Remote - Contract Opportunity!!\n",
+      "None\n",
+      "from: Bhanu Singh <bhanupriya@ibridgetechsoft.com> date:2024-08-15 15:29:47-04:00\n",
+      "        subject: Python Developer with NodeJs\n",
+      "None\n",
+      "from: \"People, Culture and Belonging: People Experience\" <human.resources@message.vu.edu> date:2024-08-15 13:41:04-04:00\n",
+      "        subject: Talent Acquisition Satisfaction Survey\n",
+      "View email online: https://t.e2ma.net/message/fr6q5j/rk1fwjid\n",
+      "---------------------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "human.resources@vanderbilt.edu  |  615-343-4788  |  hr.vanderbilt.edu\n",
+      "\n",
+      "At Vanderbilt University, we are always seeking to improve our talent acquisition practices. As a recent job applicant, we would greatly appreciate your feedback about your personal experience with our talent acquisition team and process.   \n",
+      "\n",
+      "Take the Talent Acquisition Satisfaction Survey. (https://t.e2ma.net/click/fr6q5j/rk1fwjid/r48ijq)\n",
+      "\n",
+      "The survey is designed to be brief and should take no more than 5-10 minutes to complete. Please aim to complete the survey by August 30. We encourage your candor, and we assure you that all survey data will remain confidential. \n",
+      "\n",
+      "Thank you in advance for your time and valuable input!\n",
+      "\n",
+      "Cleo Rucker\n",
+      "Associate Vice Chancellor of People Experience & Chief People Experience Officer\n",
+      "\n",
+      "People, Culture and Belonging  |  Vanderbilt University\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "---------------------------------\n",
+      "\"Vanderbilt\" and the Vanderbilt logo are registered trademarks and service marks of Vanderbilt University.\n",
+      "\n",
+      "Manage your preferences: https://radar.app.vanderbilt.edu/radar/epc/index.aspx?subscriberkey=[[email]]&area=[[area]]&email-type-code=[[type]]&advID=[[id-number]]&appeal=[[appeal]] | Unsubscribe from all: https://t.e2ma.net/optout/fr6q5j/rk1fwjid?s=6tZ1XlAqCfX9qLQ9MouwgIdjSenmCyRwX9OJ_pOiGPU\n",
+      "from: Bhanu Singh <bhanupriya@ibridgetechsoft.com> date:2024-08-15 11:04:08-04:00\n",
+      "        subject: Java developer (Healthcare domain)\n",
+      "None\n",
+      "from: Trane Technologies Careers <tranetechnologiescareers_noreply@tranetechnologies.com> date:2024-08-15 10:20:48-04:00\n",
+      "        subject: Status of your application with Trane Technologies\n",
+      "None\n",
+      "from: hr-recruiting@enfusion.com date:2024-08-15 09:46:16-04:00\n",
+      "        subject: Update from Enfusion on your application\n",
+      "Mahidhar Reddy,\n",
+      "\n",
+      "Thank you for your interest in Enfusion and our Experienced Java Developer position.\n",
+      "\n",
+      "We had a very large number of applicants apply to this role and, the position is now closed. We encourage you to continue to consider Enfusion for future opportunities and look forward to connecting with you soon.\n",
+      "\n",
+      "In the meantime, we wish you success with your job search and your career. Thanks again for your interest in Enfusion!\n",
+      "\n",
+      "Thank you,\n",
+      "\n",
+      "Enfusion Talent Acquisition Team\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Total messages: {len(messages)}')\n",
+    "for message in messages:\n",
+    "    print(f\"\"\"from: {message.sender} date:{message.date}\n",
+    "        subject: {message.subject}\"\"\")\n",
+    "    print(message.plain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total messages: 8\n",
+      "from: <Recruiting@tranetechnologies.com> date:2024-08-15 19:43:11-04:00\n",
+      "        subject: Trane Technologies Candidate Experience Survey\n",
+      "No.\n",
       "from: Platform Notifications <PlatformNotifications-noreply@google.com> date:2024-08-15 18:04:00-04:00\n",
       "        subject: Your project gmail-api-432621 has been shut down\n",
       "No.\n",
@@ -64,10 +187,10 @@
       "No.\n",
       "from: Trane Technologies Careers <tranetechnologiescareers_noreply@tranetechnologies.com> date:2024-08-15 10:20:48-04:00\n",
       "        subject: Status of your application with Trane Technologies\n",
-      "No\n",
+      "No.\n",
       "from: hr-recruiting@enfusion.com date:2024-08-15 09:46:16-04:00\n",
       "        subject: Update from Enfusion on your application\n",
-      "No.\n"
+      "Yes.\n"
      ]
     }
    ],
@@ -77,8 +200,8 @@
     "    print(f\"\"\"from: {message.sender} date:{message.date}\n",
     "        subject: {message.subject}\"\"\")\n",
     "    result = ollama.generate(model='llama3.1', prompt=f\"\"\"Here is mail I received:\n",
-    "                             {message.plain}\n",
-    "                             Give a simple Yes or No answer to the question - Do you think the following mail I recieved is regarding a job application? \"\"\")\n",
+    "{message.plain}\n",
+    "Give a simple Yes or No answer to the question - Do you think the mail I recieved is regarding a software job application? \"\"\")\n",
     "    print(result['response'])\n",
     "    "
    ]
