--- a/mail-connect-demo.ipynb
+++ b/mail-connect-demo.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "using exisiting token\n"
+      "using exisiting token\n",
+      "token expired - authentication required\n"
      ]
     }
    ],
@@ -79,19 +80,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "From: Skydive Space Center <skydivespacecenter@attractionsuite.com>\n",
-      "Date: 2024-08-09 11:34:50-04:00\n",
-      "\tSubject: Your Online Reservation\n",
-      "From: Auto-Receipt <noreply@mail.authorize.net>\n",
-      "Date: 2024-08-09 11:34:45-04:00\n",
-      "\tSubject: Transaction Receipt from Skydive Space Center for $100.00 (USD)\n",
+      "\n",
+      "Your browser has been opened to visit:\n",
+      "\n",
+      "    https://accounts.google.com/o/oauth2/auth?client_id=395092168133-6pck9snola6m5gqtp8mt8ciau26fdncp.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fgmail.modify+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fgmail.settings.basic&access_type=offline&response_type=code&prompt=consent\n",
+      "\n",
+      "If your browser is on a different machine then exit and re-run this\n",
+      "application with the command-line parameter\n",
+      "\n",
+      "  --noauth_local_webserver\n",
+      "\n",
+      "Authentication successful.\n",
+      "From: Google Maps Timeline <noreply-maps-timeline@google.com>\n",
+      "Date: 2024-08-21 01:35:11-04:00\n",
+      "\tSubject: 🌎 A new device is saving visits in Timeline\n",
       "From: Jennifer Leale <jleale@fsu.edu>\n",
       "Date: 2024-08-09 09:16:54-04:00\n",
       "\tSubject: Interview for the Application Developer/Designer Position\n",
@@ -133,14 +142,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get mails with query\n",
     "from simplegmail import query\n",
     "\n",
-    "gmail.get_messages(query=query.construct_query(newer_than=(1, \"day\"), labels=[[\"INBOX\"]]))"
+    "messages = gmail.get_messages(query=query.construct_query(newer_than=(11, \"day\"), labels=[[\"INBOX\"]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'size={len(messages)}')\n",
+    "for message in messages:\n",
+    "    print(f'{message}, {message.date}')\n",
+    "    print(f'\\t{message.subject}')\n",
+    "    print(f'\\t{message.snippet}')\n",
+    "    # print(message.plain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "message = service.users().messages().get(\n",
+    "                userId='me', id='1913749036c02855'\n",
+    "            ).execute()\n",
+    "message"
    ]
   }
  ],
